--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pronađi rejon</title>
+  <title>Пронађи рејон</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
@@ -16,12 +16,13 @@
     <div class="districts__content-wrapper">
       <label for="search" class="districts__search">
         <input class="districts__search-input" type="text" id="search">
-        <span class="districts__search-description">Ukucajte ime ulice kako biste videli kom rejonu pripada</span>
+        <span class="districts__search-description">Укуцајте име улице како бисте видели ком рејону припада</span>
       </label>
       <div class="districts__results">
         <div class="districts__heading">
-          <span class="districts__heading-item districts__heading-item--street">Ulica</span>
-          <span class="districts__heading-item districts__heading-item--district-number">Rejon</span>
+          <span class="districts__heading-item districts__heading-item--both">Улице и Рејони</span>
+          <span class="districts__heading-item districts__heading-item--street">Улица</span>
+          <span class="districts__heading-item districts__heading-item--district-number">Рејон</span>
         </div>
         <div class="results__content"></div>
       </div>
