--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="districts">
     <div class="districts__logo-wrapper">
-      <img class="districts__logo" src="/assets/posta-logo.png" alt="logo">
+      <img class="districts__logo" src="assets/posta-logo.png" alt="logo">
     </div>
     <div class="districts__content-wrapper">
       <label for="search" class="districts__search">
